@@ -50,30 +50,24 @@ enum LIBFGUID_IDENTIFIER_VERSIONS
 
 /* The string format definition flags
  */
-enum LIBFGUID_STRING_FORMAT_FLAG_FLAGS
+enum LIBFGUID_STRING_FORMAT_FLAGS
 {
 	/* Format the using lower case
 	 */
-	LIBFGUID_STRING_FORMAT_FLAG_FLAG_USE_LOWER_CASE		= 0x00000001UL,
+	LIBFGUID_STRING_FORMAT_FLAG_USE_LOWER_CASE		= 0x00000001UL,
 
 	/* Format the using upper case
 	 */
-	LIBFGUID_STRING_FORMAT_FLAG_FLAG_USE_UPPER_CASE		= 0x00000002UL,
+	LIBFGUID_STRING_FORMAT_FLAG_USE_UPPER_CASE		= 0x00000002UL,
 
 	/* Format the using mixed case
 	 */
-	LIBFGUID_STRING_FORMAT_FLAG_FLAG_USE_MIXED_CASE		= 0x00000003UL,
+	LIBFGUID_STRING_FORMAT_FLAG_USE_MIXED_CASE		= 0x00000003UL,
 
 	/* Format the using surrounding braces { GUID }
 	 */
-	LIBFGUID_STRING_FORMAT_FLAG_FLAG_USE_SURROUNDING_BRACES	= 0x00000004UL
+	LIBFGUID_STRING_FORMAT_FLAG_USE_SURROUNDING_BRACES	= 0x00000004UL
 };
-
-/* Deprecated will be removed after a while
- */
-#define LIBFGUID_STRING_FORMAT_FLAG_USE_LOWER_CASE			LIBFGUID_STRING_FORMAT_FLAG_USE_LOWER_CASE
-#define LIBFGUID_STRING_FORMAT_FLAG_USE_UPPER_CASE			LIBFGUID_STRING_FORMAT_FLAG_USE_UPPER_CASE
-#define LIBFGUID_STRING_FORMAT_FLAG_USE_SURROUNDING_BRACES		LIBFGUID_STRING_FORMAT_FLAG_USE_SURROUNDING_BRACES
 
 #endif
 
